2004-12-19  Noah Misch  <noah@cs.caltech.edu>

	* tests/Makefile.am (installcheck-local): Use $(bindir).
	(check-local, installcheck-local): Pass TESTSUITEFLAGS.
	* doc/autoconf.texi (Making testsuite Scripts): Recommend the same
	Makefile.am scheme Autoconf now uses.

2004-12-18  Noah Misch  <noah@cs.caltech.edu>

	* lib/m4sugar/m4sugar.m4 (m4_qlen, m4_qdelta): New macros.
	* lib/autotest/general.m4 (AT_SETUP): Use m4_qdelta.

2004-12-18  Noah Misch  <noah@cs.caltech.edu>

	* lib/autotest/general.m4 (_AT_DECIDE_TRACEABLE): New macro.
	(_AT_CHECK): Use it.
	* lib/m4sugar/m4sh.m4 (AS_ESCAPE_FOR_EXPAND): Remove.
	(AS_ESCAPE): Fix comment.
	* tests/autotest.at: Adjust section banner comments.
	(AT_CHECK_AT): Accept STATUS and STDERR.
	(AT_CHECK_AT_TEST): Likewise.
	(Invalid brace-enclosed parameter expansion)
	(Multiline command from M4 expansion)
	(Double-M4-quoted command): New tests.

2004-12-17  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi: Update GNU FDL version from 1.1 to 1.2.

2004-12-17  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (AC_SUBST, AC_SUBST_FILES): Pass $1 to
	m4_pattern_allow.
	Suggested by Alexandre Duret-Lutz.
	* doc/autoconf.texi (Setting Output Variables): Catch up.

2004-12-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4 (_AS_TEST_PREPARE): Fix comment.

2004-12-17  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_LIBOBJ): We can use AC_SUBST/2,
	  remove the comment which said we cannot.

2004-12-17  Stepan Kasal  <kasal@ucw.cz>

	Add a specialized check for resolv.h.  Thanks to Gerrit P. Haase,
	Reini Urban and Paul Eggert for reporting the dependencies.

	* lib/autoconf/headers.m4 (AC_HEADER_RESOLV): New macro.
	* doc/autoconf.texi (AC_HEADER_RESOLV): Document it.
	(AC_HEADER_STAT): @cvindex{STAT_MACROS_BROKEN}, not @acindex.

2004-12-17  Stepan Kasal  <kasal@ucw.cz>

	* bin/autoscan.in: Open autoscan.log only after ``parse_args'';
	  so that eg. ``autoscan --help'' doesn't truncate it.
